--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".MainActivityLogin"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".MainActivityNotesDetails"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivityNotes"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".MainActivityLogin" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".MainActivity2"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:exported="false" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".MainActivity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".MainActivityAddItem"
             android:exported="false">
